--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         document.documentElement.classList.toggle('dark', true)
     })()
   </script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D65J5WZ8ZT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D65J5WZ8ZT');
+  </script>
 </head>
 <body class="font-sans text-gray-700 dark:text-gray-200">
   <div id="app"></div>
