--- a/public/wechat-annual-report-nuxtjs/200.html
+++ b/public/wechat-annual-report-nuxtjs/200.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/wechat-annual-report/_nuxt/entry.C5wovgq3.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/wechat-annual-report/_nuxt/fPU34_hE.js">
-<link rel="prefetch" as="style" crossorigin href="/wechat-annual-report/_nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report/_nuxt/V_U6c5Ro.js">
-<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report/_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report/_nuxt/CDUbeTEl.js">
-<link rel="prefetch" as="style" crossorigin href="/wechat-annual-report/_nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report/_nuxt/D_pTxdgA.js">
-<script type="module" src="/wechat-annual-report/_nuxt/fPU34_hE.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733479418000,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/wechat-annual-report/",buildId:"f15a856b-f76d-44ad-b5d0-7928b3358e11",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="/wechat-annual-report-nuxtjs/_nuxt/entry.C5wovgq3.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/fPU34_hE.js">
+<link rel="prefetch" as="style" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/error-404.CoZKRZXM.css">
+<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/V_U6c5Ro.js">
+<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/DlAUqK2U.js">
+<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/CDUbeTEl.js">
+<link rel="prefetch" as="style" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/error-500.D6506J9O.css">
+<link rel="prefetch" as="script" crossorigin href="/wechat-annual-report-nuxtjs/_nuxt/D_pTxdgA.js">
+<script type="module" src="/wechat-annual-report-nuxtjs/_nuxt/fPU34_hE.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733710815349,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/wechat-annual-report-nuxtjs/",buildId:"bfe02627-ae51-49aa-bc9e-e5767a7229da",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
